JDK8 gc log file overwrite analysis.